--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
         "@prisma/client": "^4.11.0",
         "bcrypt": "^5.1.1",
         "jsonwebtoken": "^9.0.2",
-        "next": "13.4.12",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
+        "next": "^13.4.12",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "stripe": "^11.16.0"
     },
     "devDependencies": {
